[gd_scene load_steps=2 format=3 uid="uid://5273yxi8befu"]

[ext_resource type="Script" uid="uid://dc11mgdpojddq" path="res://scripts/password_hacking.gd" id="1_cai8r"]

[node name="PasswordHacking" type="VBoxContainer"]
offset_right = 736.0
offset_bottom = 104.0
size_flags_horizontal = 3
script = ExtResource("1_cai8r")

[node name="ProcessTitle" type="RichTextLabel" parent="."]
layout_mode = 2
fit_content = true

[node name="Progress" type="RichTextLabel" parent="."]
layout_mode = 2
fit_content = true

[node name="Yield" type="RichTextLabel" parent="."]
layout_mode = 2
fit_content = true

[node name="Total" type="RichTextLabel" parent="."]
layout_mode = 2
fit_content = true

[node name="ScrambleTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="UnscrambleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="ScrambleTimer" to="." method="_on_scramble_timer_timeout"]
[connection signal="timeout" from="UnscrambleTimer" to="." method="_on_unscramble_timer_timeout"]
